rnsc/test_data/rns_integration/error/parser/class_header/access_flags/native.rns
.class native HelloWorld
.super java/lang/Object
.class_end
